@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/openssh
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.560 2015/04/28 04:39:35 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.561 2015/05/04 02:56:25 vapier Exp $
+
+  04 May 2015; Mike Frysinger <vapier@gentoo.org> files/sshd.rc6.4:
+  Clean up depend scan logic a bit.
 
 *openssh-6.8_p1-r5 (28 Apr 2015)
 
