@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/iputils
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/iputils/ChangeLog,v 1.144 2015/04/25 01:54:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/iputils/ChangeLog,v 1.145 2015/05/04 02:35:57 vapier Exp $
+
+  04 May 2015; Mike Frysinger <vapier@gentoo.org> iputils-20121221-r2.ebuild,
+  iputils-99999999.ebuild:
+  Fix install of clockdiff #547752 by Robert Sebastian Gerus.
 
   25 Apr 2015; Mike Frysinger <vapier@gentoo.org> iputils-20121221-r2.ebuild,
   iputils-99999999.ebuild:
